test/tests/operators/from_splunk/error_unauthorized.txt
error: received HTTP error status 401
 --> tests/operators/from_splunk/error_unauthorized.tql:6:13
  |
6 | from_splunk env("HTTP_FIXTURE_SPLUNK_UNAUTHORIZED_URL"),
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
